# RepetitorPlatform

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/account/: account.cpp  account.h  account.ui
src/auth/: auth.cpp  auth.h  auth.ui
src/authbase/: authbase.cpp  authbase.h
src/basewin/: basewin.cpp  basewin.h
src/controllers/: UserController.cpp  UserController.h
src/data/: calendar.txt  credentials.txt  items.txt  math-4.txt  math-5.txt  repetitors.txt  test.txt
src/exception/: AuthError.cpp  AuthError.h  CalendarError.cpp  CalendarError.h  CredentialFileError.cpp  CredentialFileError.h  ErrorBase.cpp  ErrorBase.h  FileError.cpp  FileError.h
src/file/: CalendarFile.cpp  CalendarFile.h  CredentialFile.h  File.cpp  File.h  QuestionFile.cpp  QuestionFile.h  TestFile.cpp  TestFile.h
src/finder/: BinarySearchTree.h  RepetitorSearchWidget.cpp  RepetitorSearchWidget.h
src/main/: mainwin.cpp  mainwin.h  mainwin.ui
src/models/: User.cpp  User.h
src/register/: register.cpp  register.h  register.ui
src/repetitors/: Repetitor.h
src/sha256/: sha256.cpp  sha256.h
src/test/: NavigationManager.cpp  NavigationManager.h  QuestionManager.cpp  QuestionManager.h  Test.cpp  Test.h  TestBase.cpp  TestBase.h  addtestwin.cpp  addtestwin.h  addtestwin.ui  testbase.ui
